# bio-inference-bench

./: .gitignore  README.md  pyproject.toml
bio_inference_bench/: __init__.py  eval_helpers.py  generation.py  grid_report.py  int8_generate.py  kv_estimator.py  kv_int8_cache.py  kv_int8_chunked.py  models.py  profiler.py  progen2_compat.py  report.py  triton_int8_attention.py  utils.py
results/profiles/: all_profiles_20260406T192259.json  progen2_long_decode_20260406T192259.json  progen2_representative_20260406T192249.json  protgpt2_decode_heavy_20260406T192219.json  protgpt2_long_decode_20260406T192236.json  protgpt2_prefill_heavy_20260406T192227.json
results/raw/: capacity_compare_20260406T224456.json  capacity_compare_20260406T225049.json  capacity_compare_20260406T225314.json  capacity_compare_20260406T225706.json  generate_fp16_20260406T224427.json  generate_int8-triton_20260406T224416.json  generate_int8-triton_20260406T225648.json  grid_progen2-small_128_128_r0_20260406T183322.json  grid_progen2-small_128_128_r1_20260406T183324.json  (+171 more)
results/summaries/: final_repo_handoff.md  (+27 more)
scripts/: benchmark_generation.py  eval_kv_fused_v5.py  eval_kv_prototype.py  eval_kv_prototype_v2.py  eval_kv_prototype_v3.py  eval_weight_quant_phase1.py  eval_weight_quant_phase2.py  eval_weight_quant_phase3.py  generate_protgpt2.py  inspect_model.py  profile_representative_configs.py  regenerate_grid_report.py  regenerate_kv_prototype_report.py  regenerate_kv_v2_report.py  regenerate_kv_v3_report.py  run_grid.py  run_smoke.py  tune_block_kv.py
tests/: test_triton_int8_attention.py
