[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-inference-bench"
version = "0.1.0"
description = "Profiling benchmark for autoregressive protein sequence generation on consumer GPUs"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.40",
    "accelerate>=0.30",
    "pandas",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["bio_inference_bench*"]
